[metadata]
name = TestPbrApp
author = glj
author-email = 7909213@qq.com
summary = test pbr app
license = MIT
description-file =
    README.rst
home-page = http://pypi.python.org/pypi/TestPbrApp
requires-python = >=2.6
classifier =
    Development Status :: Beta
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python

[files]
    packages = myapp